Adding to style.
Moved to have mobile first, also trying to add some animated buttons with css when your pointer touches the button to appear more clickable

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <input type="text" name="code" placeholder="The Password">
       </fieldset>
     </div>
-    <input type="submit" value="Erase Public Existance" id="submit_button"/>
+    <input type="button" value="Erase Public Existance" id="submit_button"/>
   </form>
   <div class="mes">
     <p> We will find you if you run away. Decide Carefully...</p>
