Updated index and style
moved the last sentence above the button, couldn't figure out why I couldn't see my changes but it turns out I forgot to change the name of screen to style and that's why I couldn't see it. IT WASN'T CONNECTED lol.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link rel="stylesheet" media="screen" href="css/reset.css" />
-  <link rel="stylesheet" media="screen" href="css/screen.css" />
+  <link rel="stylesheet" media="screen" href="css/style.css" />
   <script src="js/script.js" async></script>
 </head>
 <body>
@@ -34,11 +34,11 @@
         </div>
         <input type="text" name="code" placeholder="The Password">
       </fieldset>
+        <div class="mes">
+        <p> We will find you if you run away. Decide Carefully...</p>
+        </div>
     </div>
     <input type="button" value="Erase Public Existance" id="submit_button"/>
   </form>
-  <div class="mes">
-    <p> We will find you if you run away. Decide Carefully...</p>
-  </div>
 </body>
 </html>
