Updated style, index, and js
added some comments, entered a class in fieldset, and changed onclick to button and alertinfo since I thought phone number will not be used, I would change it to name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h2>Illuminatti Initiation</h2>
   <form method="POST" autocomplete="on" action="#null">
     <div id="body">
-      <fieldset>
+      <fieldset class="input">
         <div>
           <label>Identity:</label>
         </div>
