--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" class="nojs">
 <head>
-  <title>Lab 2</title>
+  <title>Project 1</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+  <link href="https://fonts.googleapis.com/css?family=Della+Respira|Titillium+Web|Zilla+Slab&display=swap" rel="stylesheet">
   <link rel="stylesheet" media="screen" href="css/reset.css" />
   <link rel="stylesheet" media="screen" href="css/style.css" />
   <script src="js/script.js" async></script>
@@ -38,7 +39,7 @@
         <p> We will find you if you run away. Decide Carefully...</p>
         </div>
     </div>
-    <input type="button" value="Erase Public Existance" id="submit_button"/>
+    <input type="button" class="button" value="Erase Public Existance" id="submit_button"/>
   </form>
 </body>
 </html>
