update index.html ---required
Added required to index for number inputs

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         <div>
           <label>Birth Date:</label>
         </div>
-        <input type="text" name="date" placeholder="MM/DD/YYYY">
+        <input type="number" minlength="8" maxlength="10" name="date" placeholder="MM/DD/YYYY" required>
         <div>
           <label>E-mail:</label>
         </div>
-        <input type="email" name="email" placeholder="Enter E-mail">
+        <input type="email" name="email" placeholder="Enter E-mail" required>
         <div>
           <label>Cellular Number:</label>
         </div>
-        <input type="tel"  name="phone" placeholder="Enter Burner Number">
+        <input type="number" minlength="7" maxlength="15" name="phone" placeholder="Enter Burner Number" required>
         <div>
           <label>Password:</label>
         </div>
-        <input type="text" name="code" placeholder="The Password">
+        <input type="text" name="code" placeholder="The Password" required>
       </fieldset>
         <div class="mes">
         <p> We will find you if you run away. Decide Carefully...</p>
