--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <title>Project 1</title>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link href="https://fonts.googleapis.com/css?family=Della+Respira|Titillium+Web|Zilla+Slab&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web|Zilla+Slab&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Zilla+Slab&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link rel="stylesheet" media="screen" href="css/reset.css" />
   <link rel="stylesheet" media="screen" href="css/style.css" />
   <script src="js/script.js" async></script>
@@ -21,7 +23,7 @@
         <div>
           <label>Birth Date:</label>
         </div>
-        <input type="number" minlength="8" maxlength="10" name="date" placeholder="MM/DD/YYYY" required>
+        <input type="number"  name="date" placeholder="MM/DD/YYYY" required>
         <div>
           <label>E-mail:</label>
         </div>
@@ -29,7 +31,7 @@
         <div>
           <label>Cellular Number:</label>
         </div>
-        <input type="number" minlength="7" maxlength="15" name="phone" placeholder="Enter Burner Number" required>
+        <input type="number" name="phone" placeholder="Enter Burner Number" required>
         <div>
           <label>Password:</label>
         </div>
