--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>Project 1</title>
   <meta charset="utf-8" />
-  <link href="https://fonts.googleapis.com/css?family=Della+Respira|Titillium+Web|Zilla+Slab&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Titillium+Web|Zilla+Slab&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Della+Respira&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Zilla+Slab&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link rel="stylesheet" media="screen" href="css/reset.css" />
